@@ -1,3 +1,8 @@
+Tue Jan 21 04:27:30 2014  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/option.c: Use "int" for IP_MULTICAST_LOOP and
+	  IP_MULTICAST_TTL on Mac OS X.
+
 Tue Jan 21 00:39:15 2014  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/option.c: Use "byte" as default argument for
